--- a/Module 2/Exercises/Lab Work/Lab2CSS.html
+++ b/Module 2/Exercises/Lab Work/Lab2CSS.html
@@ -8,20 +8,25 @@
 
     .style-me1 {
       color: red;
+    
     }
 
-    .id.style-me2 {
+    #style-me2 {
       color: blue;
+    }
+
+    #style-me2.style-me1{
+      color: blueviolet;
     }
 
     /* II. Box model and common properties */
 
     .my-descendants-are-styled {
-      background-color: red;
+      background-color: rgb(201, 25, 25);
     }
 
     .my-children-are-styled {
-      background-color: red;
+      background-color: rgb(201, 25, 25);
     }
 
     .box {
@@ -46,7 +51,7 @@
 
     .text-style {
       font-size: medium;
-      color: blueviolet;
+      color: rgb(35, 148, 78);
       line-height: 2;
     }
 
