--- a/Module 2/Exercises/Lab Work/Lab3Flexbox.html
+++ b/Module 2/Exercises/Lab Work/Lab3Flexbox.html
@@ -44,6 +44,38 @@
         width: 80px;
       }
 
+      .flex-container {
+        display: flex;
+        flex-direction:column-reverse;
+      }
+      .flex-item-1 {
+        flex: 4;
+      }
+      .flex-item-2 {
+        flex: 2;
+      }
+      .flex-item-3 {
+        flex: 3;
+      }
+      .flex-item-4 {
+        flex: 1;
+      }
+      .flex-center {
+        justify-content: center;
+        align-items: center;
+      }
+
+      .flex-space-between {
+        justify-content: space-evenly;
+
+      }
+      .flex-wrap {
+        flex-wrap: wrap
+      }
+      .flex-basis-item-50 {
+        flex-basis: 30%;
+      }
+
     </style>
   </head>
   <body>
@@ -69,6 +101,9 @@
       <h3>Spacing elements on the opposite sides</h3>
       <div class="flex-container flex-space-between">
         <div class="h-80 background-1">I'm on the left</div>
+        <div class="h-80 background-2">I'm on the right</div>
+        <div class="h-80 background-2">I'm on the right</div>
+        <div class="h-80 background-2">I'm on the right</div>
         <div class="h-80 background-2">I'm on the right</div>
       </div>
     </section>
