--- a/Module 4/Lab Work 1/calculator.html
+++ b/Module 4/Lab Work 1/calculator.html
@@ -83,9 +83,9 @@ html,body{
     <h1>Calculator</h1>
     <input type="text" id="inp" placeholder="Enter Value..." readonly="">
     <div class="btns">
-    <button onclick="AT_add(1)">0</button>
-    <button onclick="AT_add(1)">1</button>
-    <button onclick="AT_add(2)">2</button>
+    <button onclick="add(1)">0</button>
+    <button onclick="add(1)">1</button>
+    <button onclick="add(2)">2</button>
     <button onclick="AT_add(3)">3</button>
     <button onclick="AT_add(4)">4</button>
     <button onclick="AT_add(5)">5</button>
