--- a/Module 4/Lab Work 1/Exercise 5.html
+++ b/Module 4/Lab Work 1/Exercise 5.html
@@ -1,5 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+    <template id="card-template">
+        <div class="card col-8" style="width: 18rem; margin:10px">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text"></p>
+            </div>
+        </div>
+    </template>
+
+<template id="card-template">
+        <div class="card col-8" style="width: 18rem; margin:10px">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text"></p>
+            </div>
+        </div>
+    </template>
 
 <head>
     <meta charset="UTF-8">
@@ -7,9 +24,15 @@
     <title>Managing Data</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
 </head>
 
+<main>
+    <div id='news-list' class="row"> </div>
+</main>
+
 <body>
+<h1> <strong>NEWS</strong></h1>
 
 
     <div> <label> News title: </div>
@@ -17,37 +40,35 @@
 
     <div> <label> News content: </div>
     <div> <input name='News Content' id='news_content' /></label> </div>
-    <button> Submit </button>
+    <button onclick="addCard()"> Submit</button>
 
-    <div class="container text-center">
-        <div class="row row-cols-4">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">NEWS1</h5>
-                    <p class="card-text">Bla
-                        card's content.</p>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">NEWS2</h5>
-                    <p class="card-text">Blahbla
-                        card's content.</p>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">NEWS3</h5>
-                    <p class="card-text">Blahblabla
-                        card's content.</p>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">NEWS4</h5>
-                    <p class="card-text">Blahblablabla
-                        card's content.</p>
-                </div>
+    <script>
+        let cards = [
+            { title: 'News1', description: 'bla' },
+            { title: 'News2', description: 'blabla' },
+            { title: 'News3', description: 'blablabla' }
+        ];
+        function addCard(card) {
+            const template = document.getElementById("card-template").content.cloneNode(true);
+            template.querySelector('.card-title').innerText = card.title;
+            template.querySelector('.card-text').innerText = card.description;
+            document.querySelector('#news-list').appendChild(template);
+        }
+
+            function getNews() {
+                return new Promise(resolve => {
+                    setTimeout(function () {
+                        resolve(cards)
+                    }, 1000)
+                })
+            }
+
+        if ('content' in document.createElement('template')) {
+            getNews().then(news => news.forEach((news) => addCard(news)));
+            }
+    </script>
+
+ 
             </div>
         </div>
     </div>
