--- a/Module 5/myapp2/public/calculator.html
+++ b/Module 5/myapp2/public/calculator.html
@@ -33,7 +33,7 @@
     let num1 = document.getElementById("num1").value;
     let num2 = document.getElementById("num2").value;
 
-    fetch(`/calculator/minus?num1=${num1}&num2=${num2}`)
+    fetch(`/calculator/minus?num1=${num1}&num2=5`)
         .then(response => response.json())
         .then(data => {
             document.getElementById("result").innerHTML =
